--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
           <img src="assests/img/image 1.png" alt="" />
         </div>
         <ul class="flex nav_ul ul2">
-          <li><img class="d-none" src="assests/img/3.png" alt="" /></li>
-          <li><img class="d-none" src="assests/img/2.png" alt="" /></li>
-          <li><img src="assests/img/1.png" alt="" /></li>
+          <li><img class="d-none" src="./assests/img/3.png" alt="" /></li>
+          <li><img class="d-none" src="./assests/img/2.png" alt="" /></li>
+          <li><img src="./assests/img/1.png" alt="" /></li>
         </ul>
       </nav>
     </header>
@@ -77,7 +77,7 @@
             <div class="container">
               <img
                 class="img_size hover_image"
-                src="assests/img/image 7.png"
+                src="./assests/img/image 7.png"
                 alt=""
               />
               <div class="r_text center">
@@ -88,7 +88,7 @@
             <div class="container">
               <img
                 class="img_size hover_image"
-                src="assests/img/image 9.png"
+                src="./assests/img/image 9.png"
                 alt=""
               />
               <div class="r_text center">
@@ -102,7 +102,7 @@
             <div class="container">
               <img
                 class="img_size hover_image"
-                src="assests/img/image 8.png"
+                src="./assests/img/image 8.png"
                 alt=""
               />
               <div class="r_text center">
@@ -114,7 +114,7 @@
             <div class="container">
               <img
                 class="img_size hover_image"
-                src="assests/img/image 7.png"
+                src="./assests/img/image 7.png"
                 alt=""
               />
               <div class="r_text center">
@@ -133,7 +133,7 @@
         <div class="container">
           <img
             class="img_size2 hover_image"
-            src="assests/img/Mask Group (1).png"
+            src="./assests/img/Mask Group (1).png"
             alt=""
           />
           <div class="r_text center">
@@ -151,7 +151,7 @@
         <div class="container">
           <img
             class="img_size2 hover_image"
-            src="assests/img/Mask Group.png"
+            src="./assests/img/Mask Group.png"
             alt=""
           />
           <div class="r_text center">
@@ -168,7 +168,7 @@
         <div class="container">
           <img
             class="img_size2 hover_image"
-            src="assests/img/Mask Group (1).png"
+            src="./assests/img/Mask Group (1).png"
             alt=""
           />
           <div class="r_text center">
@@ -202,13 +202,13 @@
       <h3 class="center">In the press</h3>
       <div class="flex j-center gap py-70">
         <div class="container">
-          <img class="img3_size" src="assests/img/Rectangle 76.png" alt="" />
+          <img class="img3_size" src="./assests/img/Rectangle 76.png" alt="" />
         </div>
         <div class="container">
-          <img class="img3_size" src="assests/img/Rectangle 75.png" alt="" />
+          <img class="img3_size" src="./assests/img/Rectangle 75.png" alt="" />
         </div>
         <div class="container">
-          <img class="img3_size" src="assests/img/Rectangle 78.png" alt="" />
+          <img class="img3_size" src="./assests/img/Rectangle 78.png" alt="" />
         </div>
       </div>
       <div class="flex view_button">
@@ -247,7 +247,7 @@
               <div class="container r-justify">
                 <img
                   class="img4_size hover_image"
-                  src="assests/img/image 12.png"
+                  src="./assests/img/image 12.png"
                   alt=""
                 />
 
